/*
 * $Id: ChangeLog,v 1.1239 2014-04-02 00:03:24 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2014-04-01 21:03 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * ./Changelog
     * Previous entry.
   * doc/classes.txt
     * Updated.

2014-04-01 19:58 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * include/i_browse.ch
   * include/i_grid.ch
   * include/i_xbrowse.ch
   * include/i_hmg_compat.ch
     ! Support for missing clauses ONGOTFOCUS, ONCHANGE, ONLOSTFOCUS,
       ONDBLCLICK, ONCLICK, ONHEADCLICK, ONQUERYDATA, ONEDITCELL, 
       ONENTER, ONCHECKCHANGE, ONABORTEDIT, ONDELETE, ONAPPEND and
       ON HEADRCLICK.
   * include/i_altsyntax.ch
     - ABORTEDIT clause.
     + ONABORTEDIT and ON ABORTEDIT clauses.
   * source\h_grid.prg
     + Self as second parameter when evaluating HEADRCLICK codeblock.

2014-03-30 16:39 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * include/i_frame.ch
     * Format.
   * source/h_frame.ch
     ! RTL support was being ignored.
     * Added WS_EX_TRANSPARENT style when OPAQUE clause is not
       used, as HMG Extended does.
     * Use only one Windows subclass function.
     ; To place a Tab inside a Frame, it's no further needed to define
       the Frame after the END TAB command. Beware that the Frame must
       not have OPAQUE clause or the TAB will not be drawn.
     ; FONTCOLOR clause is ignored by Windows.
     ; BACKCOLOR clause only applies to the caption's
     ; The inner area is always painted with the Form's backcolor.
   * ./Changelog.003
     * 2012-08-05 01:50 UTC-0300 entry.
   * include/i_tooltip.ch
     + Added SET TOOLTIPINITIALTIME TO <nMilliSec>: sets the default
       initial time for all ToolTip controls created afterward.
     + Added SET TOOLTIPAUTOPOPTIME TO <nMilliSec>: sets the default