@@ -1,11 +1,21 @@
 /*
- * $Id: ChangeLog,v 1.1239 2014-04-02 00:03:24 fyurisich Exp $
+ * $Id: ChangeLog,v 1.1240 2014-04-07 00:07:08 fyurisich Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2014-04-06 21:06 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
+   * source/c_image.c
+     + PNG and TIFF support to _OOHG_LoadImage C-level function.
+       This enables IMAGE control to use PNG and TIFF images from
+       the resource file, using the following syntax:
+       IMAGE1 PNG DEMO.PNG
+       IMAGE2 TIFF DEMO.TIF
+     ; OOHG now supports loading ICO, BMP, JPG, GIF, PNG and TIFF
+       images from the resource file.
 
 2014-04-01 21:03 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
    * ./Changelog
